--- a/Spam.ipynb
+++ b/Spam.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Spam Classification\n",
+    "# Spam Classification\n",
     "\n",
-    "In this project we used text classification to determined whether the messages is spam or not. We used NLP methods to prepare and clean our text data (tokenization, remove stop words, stemming) and different machine learning algorithms to get more accurate predictions. The following classification algorithms have been used: Logistic Regression, Naive Bayes, Support Vector Machine (SVM), Random Forest, Stochastic Gradient Descent and Gradient Boosting.\n",
+    "In this project I have used text classification to determined whether the messages is spam or not. I have used NLP methods to prepared and clean text data (tokenization, remove stop words, stemming) and different machine learning algorithms to get more accurate predictions. The following classification algorithms have been used: Logistic Regression, Naive Bayes, Support Vector Machine (SVM), Random Forest, Stochastic Gradient Descent and Gradient Boosting.\n",
     "\n",
     "### Dataset\n",
-    "The dataset comes from SMS Spam Collection that can be find at https://www.kaggle.com/uciml/sms-spam-collection-dataset. \n",
+    "The dataset comes from SMS Spam Collection that can be find at Kaggle.\n",
     "\n",
     "This SMS Spam Collection is a set of SMS tagged messages that have been collected for SMS Spam research. It comprises one set of SMS messages in English of 5,574 messages, which is tagged acording being ham (legitimate) or spam. \n"
    ]
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Loading libaries and data"
+    "## Import libriaries and data"
    ]
   },
   {
@@ -216,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have 86 961 words in the data:"
+    "There are 86 961 words in the data:"
    ]
   },
   {
@@ -422,7 +422,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We change column \"Class\" to 0 and 1:\n",
+    "Changing column \"Class\" to 0 and 1:\n",
     "\n",
     "- spam = 1\n",
     "- ham = 0"
@@ -551,9 +551,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Basic EDA\n",
+    "## Data analysis\n",
     "\n",
-    "We check proportion Class variable:"
+    "Checking proportion 'Class' variable:"
    ]
   },
   {
@@ -820,7 +820,7 @@
    "source": [
     "### Text Pre-processing\n",
     "\n",
-    "In the next step we clean text, remove stop words and apply stemming operation for each line of text:"
+    "In the next step I clean text, remove stop words and apply stemming operation for each line of text:"
    ]
   },
   {
@@ -1076,7 +1076,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After text cleaning and removing stop words, we have only 49 940 words."
+    "After text cleaning and removing stop words there are only 49 940 words."
    ]
   },
   {
@@ -1085,9 +1085,9 @@
    "source": [
     "### Vectorization\n",
     "\n",
-    "To run machine learning algorithms we need to convert text files into numerical feature vectors. We will use bag of words model for our analysis.\n",
+    "To run machine learning algorithms need to convert text files into numerical feature vectors. I use bag of words model for the analysis. \n",
     "\n",
-    "First we spliting the data into X and y values:"
+    "First I splitting the data into X and y values:"
    ]
   },
   {
@@ -1104,7 +1104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we create a numerical feature vector for each document:"
+    "Creating a numerical feature vector for each document: "
    ]
   },
   {
@@ -1135,7 +1135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We spliting the data into train and test sets:"
+    "Splitting the data into train and test sets:"
    ]
   },
   {
@@ -1169,12 +1169,11 @@
    "source": [
     "**SMOTE**\n",
     "\n",
-    "The target class variable is imbalanced, \"ham\" values are more dominating than \"spam\". \n",
-    "The simplest way to improve imbalanced dataset is balancing them by oversampling instances of the minority class or undersampling instances of the majority class. We will try to balancing classes by using one of the advanced techniques like the SMOTE method (Synthetic Minority Over-sampling Technique).\n",
+    "The target class variable is imbalanced, \"ham\" values are more dominating than \"spam\". The simplest way to improve imbalanced dataset is balancing them by oversampling instances of the minority class or undersampling instances of the majority class. I will use one of the advanced techniques like the SMOTE method (Synthetic Minority Over-sampling Technique) to balancing classes.\n",
     "\n",
     "SMOTE technique  is one of the most commonly used oversampling methods to solve the imbalance problem. It goal is to balance class distribution by randomly increasing  minority class examples by replicating them.  \n",
     "\n",
-    "We will use imbalanced-learn library to apply SMOTE method:"
+    "To apply SMOTE method I use imbalanced-learn library."
    ]
   },
   {
@@ -1219,9 +1218,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Building models\n",
+    "## Models\n",
     "\n",
-    "We use the following classification models:\n",
+    "I use the following classification models:\n",
     "\n",
     "- Logistic Regression,\n",
     "- Naive Bayes Classifier,\n",
@@ -1230,7 +1229,7 @@
     "- SVM (Support Vector Machine),\n",
     "- Stochastic Gradient Descent.\n",
     "\n",
-    "To make the vectorizer => transformer => classifier easier to work with, we will use Pipeline class in Scilkit-Learn.\n",
+    "To make the vectorizer => transformer => classifier easier to work with I use Pipeline class in Scilkit-Learn.\n",
     "\n",
     "\n",
     "**Logistic regression**"
@@ -1533,9 +1532,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Best model**\n",
+    "### Best model\n",
     "\n",
-    "We tested six different models and now, we check which one is the best:"
+    "I tested six different models and now I check which one is the best:"
    ]
   },
   {
@@ -1643,9 +1642,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Conclusion\n",
+    "## Summary\n",
     "\n",
-    "This project was aimed to text classification to determined whether the messages is spam or not. We started with the dcleaning and text mining, which cover change text into tokens, remove punctuation, stop words and normalization them by stemming. Following we used bag of words model to convert the text into numerical feature vectors. Finally we started training six different classification models and we got the best accuracy of 0.97 for Naive Bayes method.\n"
+    "This project was aimed to text classification to determined whether the messages is spam or not. I have started with the dcleaning and text mining, which cover change text into tokens, remove punctuation, stop words and normalization them by stemming. Following I have used bag of words model to convert the text into numerical feature vectors. Finally I have started training six different classification models and we got the best accuracy of 0.97 for Naive Bayes method.\n"
    ]
   },
   {
@@ -1658,7 +1657,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1672,9 +1671,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
